HelloUltraviolet/Fixtures/RejectedSource/Comptime/UnknownDeriveTarget/Source/Main.uv
//! Rejected derive specimen for unresolved derive target names.

[[derive(MissingDeriveTarget)]]
public record UnknownDeriveTargetReference {
    public value: i32
}
